--- a/datatables.html
+++ b/datatables.html
@@ -21,20 +21,10 @@
     <link href="stylesheets/color/gray.css" media="all" rel="alternate stylesheet" title="gray-theme" type="text/css"/>
 
     <link href="stylesheets/font-awesome.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/isotope.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/jquery.fancybox.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/fullcalendar.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/wizard.css" media="all" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/select2.css" media="all" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/datatables.css" media="all" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/datepicker.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/timepicker.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/colorpicker.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/daterange-picker.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/typeahead.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/summernote.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="stylesheets/pygments.css" media="all" rel="stylesheet" type="text/css"/>
+
 
     <script src="javascripts/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="javascripts/jquery-ui.js" type="text/javascript"></script>
@@ -77,6 +67,8 @@
     <script src="javascripts/main.js" type="text/javascript"></script>
     <script src="javascripts/respond.js" type="text/javascript"></script>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+
+    <script src="javascripts/data_datatables.js" type="text/javascript"></script>
 </head>
   <body>
     <div class="modal-shiftfix">
@@ -112,7 +104,7 @@
                       <li class="dropdown user hidden-xs"><a data-toggle="dropdown" class="dropdown-toggle" href="#">
                           <img width="34" height="34" src="images/avatar-male2.png" />您好,王凯飞<b class="caret"></b></a>
                           <ul class="dropdown-menu">
-                              <li><a href="login1.html">
+                              <li><a href="###">
                                   <i class="icon-signout"></i>退出</a>
                               </li>
                           </ul>
@@ -124,15 +116,15 @@
               <div class="nav-collapse">
                   <ul class="nav">
                       <li>
-                          <a class="current" href="index.html"><span aria-hidden="true" class="se7en-home"></span>整体统计</a>
+                          <a href="index.html"><span aria-hidden="true" class="se7en-home"></span>整体统计</a>
                       </li>
-                      <li><a href="#">
+                      <li><a class="current" href="datatables.html">
                           <span aria-hidden="true" class="se7en-feed"></span>公司统计</a>
                       </li>
-                      <li><a href="#">
+                      <li><a href="timeline.html">
                           <span aria-hidden="true" class="se7en-charts"></span>大事记</a>
                       </li>
-                      <li><a href="#">
+                      <li><a href="histables.html">
                           <span aria-hidden="true" class="se7en-gallery"></span>历史快照</a>
                       </li>
                   </ul>
@@ -188,108 +180,7 @@
                     </th>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td class="check hidden-xs">
-                        <label><input name="optionsRadios1" type="checkbox" value="option1"><span></span></label>
-                      </td>
-                      <td>
-                        北京热电
-                      </td>
-                      <td>
-                        156
-                      </td>
-                      <td class="hidden-xs">
-                        150
-                      </td>
-                      <td class="hidden-xs">
-                        120
-                      </td>
-                      <td class="hidden-xs">
-                        <span class="label label-success">52345,238</span>
-                      </td>
-                      <td>
-                          8,345.00
-                        </td>
-                      <td class="hidden-xs">
-                          324,565
-                        </td>
-                      <td class="hidden-xs">
-                          4,565
-                        </td>
-                      <td class="actions">
-                        <div class="action-buttons">
-                          <a class="table-actions" href="#"><i class="icon-eye-open"></i></a><a class="table-actions" href="#"><i class="icon-pencil"></i></a><a class="table-actions" href="#"><i class="icon-trash"></i></a>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                        <td class="check hidden-xs">
-                            <label><input name="optionsRadios1" type="checkbox" value="option1"><span></span></label>
-                        </td>
-                        <td>
-                            北京热电
-                        </td>
-                        <td>
-                            158
-                        </td>
-                        <td class="hidden-xs">
-                            145
-                        </td>
-                        <td class="hidden-xs">
-                            119
-                        </td>
-                        <td class="hidden-xs">
-                            <span class="label label-success">2345,238</span>
-                        </td>
-                        <td>
-                            77,345.00
-                        </td>
-                        <td class="hidden-xs">
-                            3324,565
-                        </td>
-                        <td class="hidden-xs">
-                            43,565
-                        </td>
-                        <td class="actions">
-                            <div class="action-buttons">
-                                <a class="table-actions" href="#"><i class="icon-eye-open"></i></a><a class="table-actions" href="#"><i class="icon-pencil"></i></a><a class="table-actions" href="#"><i class="icon-trash"></i></a>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="check hidden-xs">
-                            <label><input name="optionsRadios1" type="checkbox" value="option1"><span></span></label>
-                        </td>
-                        <td>
-                            北京热电
-                        </td>
-                        <td>
-                            176
-                        </td>
-                        <td class="hidden-xs">
-                            160
-                        </td>
-                        <td class="hidden-xs">
-                            110
-                        </td>
-                        <td class="hidden-xs">
-                            <span class="label label-success">43235,238</span>
-                        </td>
-                        <td>
-                            9,345.00
-                        </td>
-                        <td class="hidden-xs">
-                            8324,565
-                        </td>
-                        <td class="hidden-xs">
-                            46,565
-                        </td>
-                        <td class="actions">
-                            <div class="action-buttons">
-                                <a class="table-actions" href="#"><i class="icon-eye-open"></i></a><a class="table-actions" href="#"><i class="icon-pencil"></i></a><a class="table-actions" href="#"><i class="icon-trash"></i></a>
-                            </div>
-                        </td>
-                    </tr>
+
                   </tbody>
                 </table>
               </div>
