--- a/histables.html
+++ b/histables.html
@@ -67,8 +67,7 @@
     <script src="javascripts/main.js" type="text/javascript"></script>
     <script src="javascripts/respond.js" type="text/javascript"></script>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-
-    <script src="javascripts/data_timeline.js" type="text/javascript"></script>
+    <script src="javascripts/data_histables.js" type="text/javascript"></script>
 </head>
   <body>
     <div class="modal-shiftfix">
@@ -115,16 +114,16 @@
           <div class="container-fluid main-nav clearfix">
               <div class="nav-collapse">
                   <ul class="nav">
-                      <li>
-                          <a href="index.html"><span aria-hidden="true" class="se7en-home"></span>整体统计</a>
+                      <li><a href="index.html">
+                          <span aria-hidden="true" class="se7en-home"></span>整体统计</a>
                       </li>
                       <li><a href="datatables.html">
                           <span aria-hidden="true" class="se7en-feed"></span>公司统计</a>
                       </li>
-                      <li><a class="current" href="timeline.html">
+                      <li><a href="timeline.html">
                           <span aria-hidden="true" class="se7en-charts"></span>大事记</a>
                       </li>
-                      <li><a href="histables.html">
+                      <li><a class="current" href="histables.html">
                           <span aria-hidden="true" class="se7en-gallery"></span>历史快照</a>
                       </li>
                   </ul>
@@ -134,29 +133,64 @@
       <!-- End Navigation -->
       <div class="container-fluid main-content">
         <div class="page-title">
-          <div>
-              <input class="btn btn-primary" style="margin-bottom: 25px;float: right;" type="submit" value="查询">
-              <div class="col-md-3" style="float: right;height: 30px;width: 200px;">
-                  <div class="input-group date datepicker">
-                      <input class="form-control" type="text" placeholder="截止日期"><span class="input-group-addon"><i class="icon-calendar"></i></span>
-                  </div>
-              </div>
-              <div class="col-md-3" style="float: right;height: 30px;width: 200px;">
-                  <div class="input-group date datepicker">
-                      <input class="form-control" type="text" placeholder="起始日期"><span class="input-group-addon"><i class="icon-calendar"></i></span>
-                  </div>
-              </div>
-          </div>
           <h1>
-            大事记
+            历史快照
           </h1>
         </div>
+        <!-- DataTables Example -->
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="widget-container fluid-height clearfix">
+              <div class="heading">
+                <i class="icon-table"></i>历史快照数据表格
+                  <input class="btn btn-primary" style="margin-bottom: 25px;float: right;" type="submit" value="查询">
+                  <div class="col-md-3" style="float: right;height: 30px;width: 200px;">
+                      <div class="input-group date datepicker">
+                          <input class="form-control" type="text" placeholder="截止日期"><span class="input-group-addon"><i class="icon-calendar"></i></span>
+                      </div>
+                  </div>
+                  <div class="col-md-3" style="float: right;height: 30px;width: 200px;">
+                      <div class="input-group date datepicker">
+                          <input class="form-control" type="text" placeholder="起始日期"><span class="input-group-addon"><i class="icon-calendar"></i></span>
+                      </div>
+                  </div>
+              </div>
+              <div class="widget-content padded clearfix">
+                <table class="table table-bordered table-striped" id="dataTable1">
+                  <thead>
+                    <th class="check-header hidden-xs">
+                      <label><input id="checkAll" name="checkAll" type="checkbox"><span></span></label>
+                    </th>
+                    <th>
+                      日期
+                    </th>
+                    <th>
+                      开户数(人)
+                    </th>
+                    <th class="hidden-xs">
+                      签约数(人)
+                    </th>
+                    <th class="hidden-xs">
+                      总资金(元)
+                    </th>
+                    <th class="hidden-xs">
+                        总收益(元)
+                    </th>
+                    <th class="hidden-xs">
+                        购买/赎回金额(元)
+                    </th>
+                    <th class="hidden-xs">
+                        购买/赎回次数(次)
+                    </th>
+                  </thead>
+                  <tbody>
 
-        <ul class="timeline animated" id="timeline">
-
-        </ul>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end DataTables Example -->
       </div>
     </div>
-  </body>
-
-</html>
